// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<WordList /> matches snapshot with 3 words 1`] = `
<DocumentFragment>
  <div
    class="wordContainer wordList"
  >
    <div
      data-testid="0"
    >
      <i
        class="bi bi-plus-lg"
      />
      Foo
    </div>
    <div
      data-testid="1"
    >
      <i
        class="bi bi-plus-lg"
      />
      Bar
    </div>
    <div
      data-testid="2"
    >
      <i
        class="bi bi-plus-lg"
      />
      Baz
    </div>
  </div>
</DocumentFragment>
`;

exports[`<WordList /> matches snapshot with empty wordlist 1`] = `
<DocumentFragment>
  <div
    class="wordContainer wordList"
  />
</DocumentFragment>
`;
